display dei colori nel terminale

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -58,9 +58,9 @@
                 <div class="mt-4">
                     <h4 class="text-center">Temperatura</h4>
                     <div class="d-flex justify-content-center align-items-center">
-                        <p class="me-3">Caldo</p>
+                        <p class="me-3">Freddo</p>
                         <input type="range" class="form-range" id="manualTemp" style="width: 300px;" min="0" max="255" disabled>
-                        <p class="ms-3">Freddo</p>
+                        <p class="ms-3">Caldo</p>
                     </div>
                 </div>
             </div>
